...
  );
}

function LearningStyleResults6() {
  return (
    <div className="bg-[rgba(255,255,255,0.2)] h-[49.991px] relative rounded-[12px] shadow-[0px_10px_15px_0px_rgba(0,0,0,0.1),0px_4px_6px_0px_rgba(0,0,0,0.1)] shrink-0 w-full" data-name="LearningStyleResults">
      <p className="-translate-x-1/2 absolute font-['Inter:Semi_Bold',sans-serif] font-semibold leading-[22.5px] left-[125.85px] not-italic text-[15px] text-center text-white top-[12.65px] tracking-[-0.2344px]">Continue to Profile</p>
    </div>
  );
}

function Container4() {
  return (
...
  );
}

function Text1() {
  return (
    <div className="absolute h-[14.997px] left-[23.28px] top-[50.99px] w-[28.222px]" data-name="Text">
      <p className="-translate-x-1/2 absolute font-['Inter:Regular',sans-serif] font-normal leading-[15px] left-[14.5px] not-italic text-[#a8b3cf] text-[10px] text-center top-[0.27px] tracking-[0.1172px]">Home</p>
    </div>
  );
}

function Icon6() {
  return (
...
