...

function Text6() {
  return (
    <div className="h-[19.488px] relative shrink-0 w-[75.594px]" data-name="Text">
      <div className="bg-clip-padding border-0 border-[transparent] border-solid relative size-full">
        <Icon5 />
        <p className="absolute font-['Inter:Regular',sans-serif] font-normal leading-[19.5px] left-[17.98px] not-italic text-[#a8b3cf] text-[13px] top-[0.91px] tracking-[-0.0762px]">10:00 AM</p>
      </div>
    </div>
  );
}

function Icon6() {
...
  );
}

function Text12() {
  return (
    <div className="absolute h-[14.997px] left-[22.12px] top-[50.99px] w-[30.562px]" data-name="Text">
      <p className="-translate-x-1/2 absolute font-['Inter:Regular',sans-serif] font-normal leading-[15px] left-[15.5px] not-italic text-[#a8b3cf] text-[10px] text-center top-[0.27px] tracking-[0.1172px]">Tutors</p>
    </div>
  );
}

function Icon15() {
  return (
...
  );
}

function Text13() {
  return (
    <div className="absolute h-[14.997px] left-[14.06px] top-[50.99px] w-[46.665px]" data-name="Text">
      <p className="-translate-x-1/2 absolute font-['Inter:Semi_Bold',sans-serif] font-semibold leading-[15px] left-[23.5px] not-italic text-[#5b7ceb] text-[10px] text-center top-[0.27px] tracking-[0.1172px]">Schedule</p>
    </div>
  );
}

function Container20() {
  return <div className="absolute h-[3.993px] left-[13.39px] rounded-[21385400px] top-0 w-[47.999px]" data-name="Container" style={{ backgroundImage: "linear-gradient(175.244deg, rgb(67, 97, 217) 0%, rgb(91, 124, 235) 100%)" }} />;
...
